# SmartBlaster

./: .gitignore  LICENSE  README.md  contributing.md  test_known_tags.sh
software/: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml  requirements.txt
software/deploy/ap/: dnsmasq.conf  hostapd.conf  start_ap_mode.sh  stop_ap_mode.sh
software/deploy/install/: first_boot_setup.sh  install_service.sh  install_vision_stack.sh  post_install_check.sh  preflight_check.sh  restart-dnsmasq-after-hostapd.service  smartblaster.env  static-ip-wlan0.service  unblock-wifi.service  uninstall_service.sh
software/deploy/security/: smartblaster-apmode.sudoers
software/deploy/systemd/: smartblaster.service
software/docs/: AI_DIARY.md  OWNER_MANUAL.md  PI_IMAGE_PREP_CHECKLIST.md  PROJECT_BACKLOG.md
software/src/: camera_test.py  main.py
software/src/smartblaster/: __init__.py  cli.py  (+4 more)
software/tests/: README.md  test_activity_log.py  test_ap_mode.py  test_bootstrap.py  test_bootstrap_ap_mode.py  test_cli.py  test_config.py  test_esp32_schema.py  test_event_sources.py  test_ir_transport.py  test_midea_command.py  test_midea_display_parser.py  test_preflight_constants.py  test_provisioning_network.py  test_provisioning_service.py  test_provisioning_state.py  test_provisioning_update.py  test_provisioning_web.py  test_reference_images.py  test_reference_offload.py  test_runtime_dispatch.py  test_setup_validation.py  test_state_machine.py  test_temperature.py  test_thermostat_library.py  test_thermostat_status.py  test_vision_dataset.py  test_vision_evaluation.py
(+70 files in other folders)
